Show list of entries

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,8 +1,7 @@
-html, body {
-  height: 100%;
+.Reader {
+  width: 80%;
 }
-#area {
-  border: 1px solid red;
-  width: 100%;
-  height: 100%;
+
+.Entry {
+  margin: 0 0 1em;
 }
