--- a/views/index.html
+++ b/views/index.html
@@ -2,10 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <title></title>
+    <title>Reader</title>
+    <script src="js/base.js" charset="utf-8"></script>
+    <script src="js/Reader.js" charset="utf-8"></script>
+    <script src="js/client.js" charset="utf-8"></script>
     <link rel="stylesheet" href="/css/style.css" />
   </head>
   <body>
-    Hello
   </body>
 </html>
