--- a/views/index.html
+++ b/views/index.html
@@ -8,6 +8,5 @@
     <script src="js/client.js" charset="utf-8"></script>
     <link rel="stylesheet" href="/css/style.css" />
   </head>
-  <body>
-  </body>
+  <body></body>
 </html>
