--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,7 +1,101 @@
+:root {
+  --black: #000000;
+  --blue: #2477BE;
+  --gray: #F4F4F4;
+  --green: #23D5AB;
+  --red: #F44336;
+  --shadow: 0,0,0;
+  --white: #FFFFFF;
+  --yellow: #FFEB3B;
+}
+
+* {
+  box-sizing: border-box;
+}
+
+html, body {
+  width: 100%;
+  height: 100%;
+}
+
+body {
+  font-size: 1.1em;
+  line-height: 135%;
+  font-weight: normal;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  text-rendering: optimizeLegibility;
+  color: var(--black);
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+  margin: 0;
+  padding: 1em;
+}
+
+
+sub, sup {
+  font-size: 75%;
+  line-height: 0;
+  position: relative;
+  vertical-align: baseline;
+  color: var(--light);
+}
+
+sup {
+  top: -0.5em;
+}
+
+sub {
+  bottom: -0.25em;
+}
+
+a {
+  text-decoration: none;
+}
+
+code {
+  font-family: monospace;
+}
+
 .Reader {
   width: 80%;
 }
 
 .Entry {
   margin: 0 0 1em;
+}
+
+
+.Spinner.is-visible {
+  display: block;
+}
+.Spinner {
+  display: none;
+  border-top: 2px solid #ddd;
+  border-right: 2px solid #ddd;
+  border-bottom: 2px solid #ddd;
+  border-left: 2px solid #0090d7;
+  animation: spinner 0.8s infinite linear;
+}
+
+.Spinner, .Spinner:after {
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+}
+
+@keyframes spinner {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+
+.Entry {
+}
+
+.Entry__title {
+  font-weight: bold;
 }
