--- a/views/index.html
+++ b/views/index.html
@@ -9,7 +9,7 @@
     <script src="js/Reader.js" charset="utf-8"></script>
     <script src="js/client.js" charset="utf-8"></script>
     <% } else { -%>
-    <script src="/js/dist/all.js"></script>
+    <script src="/js/all.js"></script>
     <% } -%>
     <link rel="stylesheet" href="/css/style.css" />
   </head>
