--- a/views/index.html
+++ b/views/index.html
@@ -11,6 +11,7 @@
     <% } else { -%>
     <script src="/js/all.js"></script>
     <% } -%>
+    <link rel="stylesheet" href="/css/reset.css" />
     <link rel="stylesheet" href="/css/style.css" />
   </head>
   <body></body>
