--- a/public/css/style.css
+++ b/public/css/style.css
@@ -53,10 +53,12 @@ code {
 }
 
 .Reader {
-  padding: 3em 3em 0 3em;
-  width: 800px;
-  margin: auto;
-  transition: padding 200ms ease-in-out;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  width: 100%;
+  height: 100%;
 }
 
 .Entry {
@@ -116,3 +118,30 @@ code {
 .Entry__title {
   font-weight: bold;
 }
+
+.Info {
+  width: 800px;
+  margin: 0 0 2em;
+  padding: 1em;
+  border: 1px solid rgba(255, 255, 255, 0.4);
+  border-radius: 2px;
+}
+
+button {
+  position: relative;
+  padding: 0.8em;
+  border: 1px solid #ccc;
+  font-size: 1em;
+  outline: none;
+  cursor: pointer;
+  -webkit-appearance: none;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 4px;
+  user-select: none;
+  background: #fafafa;
+  transition: background 100ms ease-in-out, opacity 100ms ease-in-out, color 100ms ease-in-out;
+}
+
