--- a/public/css/style.css
+++ b/public/css/style.css
@@ -84,14 +84,11 @@ code {
 }
 
 .Spinner {
-  position: absolute;
-  top: 1em;
-  right: 1em;
   display: none;
-  border-top: 2px solid var(--white);
-  border-right: 2px solid var(--white);
-  border-bottom: 2px solid var(--white);
-  border-left: 2px solid #0090d7;
+  border-top: 3px solid var(--gray);
+  border-right: 3px solid var(--gray);
+  border-bottom: 3px solid var(--gray);
+  border-left: 3px solid var(--text);
   animation: spinner 0.8s infinite linear;
 }
 
@@ -122,6 +119,7 @@ code {
 }
 
 .Info {
+  position: relative;
   width: 800px;
   margin: 0 0 1em;
   padding: 1em;
