--- a/views/index.html
+++ b/views/index.html
@@ -6,6 +6,7 @@
     <% if (isDevelopment) { -%>
     <script src="js/base.js" charset="utf-8"></script>
     <script src="js/Spinner.js" charset="utf-8"></script>
+    <script src="js/Preview.js" charset="utf-8"></script>
     <script src="js/Reader.js" charset="utf-8"></script>
     <script src="js/client.js" charset="utf-8"></script>
     <% } else { -%>
