--- a/public/css/style.css
+++ b/public/css/style.css
@@ -63,9 +63,27 @@ code {
   height: 100%;
 }
 
+.Entries {
+  width: 100%;
+  height: 100%;
+  padding: 2em;
+  overflow: hidden;
+  overflow-y: scroll;
+}
+
+.Entry.is-visible {
+  display: block;
+}
+
 .Entry {
+  display: none;
   margin: 0 0 2em;
   font-size: 1em;
+}
+
+.Entry__summary {
+  font-style: italic;
+  margin: 0 0 1em;
 }
 
 .Entry__title {
@@ -196,11 +214,6 @@ button {
   margin: 0 .4em;
 }
 
-.Preview.is-visible {
-  opacity: 1;
-  visibility: visible;
-}
-
 .Preview {
   position: fixed;
   top: 50%;
@@ -208,19 +221,25 @@ button {
   margin-left: -450px;
   margin-top: -350px;
 
-  z-index: 1000;
   width: 900px;
   height: 700px;
-  overflow: hidden;
   border: 1px solid rgb(94, 63, 38);
-  padding: 1em;
-  overflow-y: scroll;
   background: var(--white);
   box-shadow: 4px 4px 0 rgb(94, 63, 38 , 0.4);
   opacity: 0;
   visibility: hidden;
   transition: opacity 250ms ease-in-out;
+  z-index: 1000;
+
+  display: flex;
+  flex-direction: column;
 }
+
+.Preview.is-visible {
+  opacity: 1;
+  visibility: visible;
+}
+
 
 .Preview a {
   text-decoration: underline;
@@ -251,6 +270,12 @@ button {
   color: var(--body-text-complementary-color);
 } 
 
+.Preview h1,
+.Preview h2,
+.Preview h3  {
+  margin: 1em 0;
+}
+
 .Preview strong,
 .Preview h1,
 .Preview h2,
@@ -258,3 +283,37 @@ button {
   font-weight: 600;
 }
 
+.Pagination {
+  display: flex;
+  width: 100%;
+  padding: 1em;
+  border-top: 1px solid var(--text);
+}
+
+.Pagination__item {
+  color: var(--text);
+}
+
+.Pagination {
+  user-select: none;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
+
+.Pagination__item {
+  color: var(--active);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  margin: 0 0.4em;
+  width: 20px;
+  height: 20px;
+}
+
+.Pagination__item.is-selected {
+  color: var(--white);
+  background: var(--text);
+  border-color: var(--text)
+}
