--- a/views/index.html
+++ b/views/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <title>Reader</title>
+    <title>Reader (1.0.0)</title>
     <% if (isDevelopment) { -%>
     <script src="js/base.js" charset="utf-8"></script>
     <script src="js/Spinner.js" charset="utf-8"></script>
