--- a/views/setup.html
+++ b/views/setup.html
@@ -6,14 +6,13 @@
     <% if (isDevelopment) { -%>
     <script src="js/base.js" charset="utf-8"></script>
     <script src="js/Spinner.js" charset="utf-8"></script>
-    <script src="js/Preview.js" charset="utf-8"></script>
-    <script src="js/Reader.js" charset="utf-8"></script>
-    <script src="js/client.js" charset="utf-8"></script>
+    <script src="js/setup.js" charset="utf-8"></script>
     <% } else { -%>
-    <script src="/js/all.js"></script>
+    <script src="/js/all.setup.js"></script>
     <% } -%>
     <link rel="stylesheet" href="/css/reset.css" />
     <link rel="stylesheet" href="/css/style.css" />
   </head>
-  <body></body>
+  <body>
+  </body>
 </html>
