--- a/views/setup.html
+++ b/views/setup.html
@@ -13,6 +13,6 @@
     <link rel="stylesheet" href="/css/reset.css" />
     <link rel="stylesheet" href="/css/style.css" />
   </head>
-  <body>
+  <body class="Setup">
   </body>
 </html>
