--- a/views/setup.html
+++ b/views/setup.html
@@ -13,9 +13,9 @@
     <link rel="stylesheet" href="/css/reset.css" />
     <link rel="stylesheet" href="/css/style.css" />
   </head>
-  <body class="Setup">
-    <p class="Setup__intro">
-      Elit explicabo iste id sit eum? Laborum illo quibusdam sint eligendi obcaecati unde Voluptatibus tenetur quos harum rem maxime a dolor rem. Unde molestiae laudantium ad rem in optio debitis.
-    </p>
+  <body class="is-setup">
+    <div class="Setup js-setup">
+      <p class="Setup__intro">Dear Reader Config Wizard</p>
+    </div>
   </body>
 </html>
